--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time GSM Data</title>
+    <title>GSM Module Communication</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-        }
-        textarea {
-            width: 100%;
-            height: 100px;
-            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -25,6 +20,9 @@
 
     <h3>Real-Time Data Received from Flask:</h3>
     <div id="realTimeData">Waiting for data...</div>
+
+    <h3>Data Received via URL:</h3>
+    <div>{{ data }}</div>
 
     <script>
         // Function to send data to Flask
