--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div id="realTimeData">Waiting for data...</div>
 
     <h3>Data Received via URL:</h3>
-    <div>{{ data }}</div>
+    <div>{{ url_data }}</div> <!-- Correct variable name -->
 
     <script>
         // Function to send data to Flask
